[package]
name = "hacspec-cbor"
version = "0.1.0"
authors = ["Mališa Vučinić <malishav@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-edhoc"
description = "Minimal CBOR encoder/decoder implementation"
readme = "README.md"
repository = "https://github.com/hacspec/hacspec"

[lib]
path = "src/cbor.rs"

[[bin]]
name = "cbor-encoder"
path = "src/cbor.rs"

[dependencies]
backtrace = "0.3.0"
hex = "0.4.3"
hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }

[dev-dependencies]  
hacspec-dev = { path = "../../utils/dev" }
